# gita-rag-system

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_query.py
ingestion/pipeline/: chunker.py  cleaner.py  embedder.py  metadata.py  normalizer.py  parser.py  run.py  uploader.py
ingestion/utils/: ocr_fallback.py  pinecone_client.py
