[project]
name = "bhaktisetu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-text-splitters>=1.1.2",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pinecone>=9.0.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.0",
]
